# BDA-550

./: .gitattributes  .pre-commit-config.yaml  FINAL-BDA-dataset(translated_dataset).csv  LICENSE  README.md  pyproject.toml
Module 4 Insights, Solution Development, and Innovation/: Module 4 Final Project Assignment 3 – First Draft - Project Group.ipynb  explore.ipynb
Module 5 Crafting and Contextualizing the Narrative/: Module 5 Final Project Assignment 4 Data Visualization Plan - Project Group.ipynb
Module 6 Communicating and Presenting Data-Driven Insights/: Group2_BDA550_Capstone.Rmd
